# PFR-1

./: CMakeLists.txt  Makefile  Txt.c  V1_rqt_txt1.py  creer_obstacle.py  creer_obstacle2.py  dessiner_balles.py  eeee  environnement.py  fctFiltrer.c  fct_COMMANDE.c  filtre2.py  fnc_de_deplacement.py  fnc_de_deplacement2.py  tempCodeRunnerFile.py  test.py  traitementImage.c
Traitement Images/: cluster.c  cluster.h  image_process.c  main.c
TraitementImages/: cluster.c  cluster.h  image_process.c  main.c
fonction_dd/: fnc_de_deplacement.py  tempCodeRunnerFile.py
fonction_traitement_image/: cluster.c  cluster.h  file_operations.c  file_operations.h  image_process.c  main_ti.c
prancipal/: main.c  prancipal.cbp
